tests/files/parser_tests/should_fail/096.cmdr
//Should not parse
scan { echo hello };